themes/webtrees/msie.css
/*
 * @version $Id$
 */
 
 form { 
	margin-top: 0px; margin-bottom: 0px;
}

.small_inner_block {
	height: expression( this.scrollHeight > 199 ? "200px" : "auto" ); 
}

.normal_inner_block {
	width: 100%;
}

/* 
 * The following style definitions can be removed when IE supports the "opacity" 
 * specification in place of its proprietary and non-standard method.
 */
.flag, .activeflag, .brightflag {
	filter: alpha(opacity=100);
}

.dimflag {
	filter: alpha(opacity=50);
}

.rela {
	filter: alpha(opacity=67);
}

a.showit:hover span {
	filter: alpha(opacity=85);
}

